# brainbit-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: resist.rs  sandbox_test.rs  scan.rs  stream.rs
sdk/: checksums.sha256  download.sh
src/: device.rs  error.rs  ffi.rs  lib.rs  main.rs  sandbox.rs  scanner.rs  types.rs  verify.rs
tests/: types_tests.rs
